# pr-pipeline-mvp

./: README.md  pyproject.toml
infra/: docker-compose.yml  python.Dockerfile
src/api/: app.py
src/common/: db.py
src/worker/: main.py
storage/minio/data/.minio.sys/: format.json
tests/fixtures/: sample_batch.json
