[project]
name = "pr-telemetry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "redis==5.0.8",
  "psycopg[binary]==3.2.1",
  "boto3==1.35.27",
  "python-dotenv==1.0.1",
  "orjson==3.10.7",
  "tenacity==9.0.0",
  "httpx==0.27.2"
]

[tool.uvicorn]
factory = true
